Add task for complete deploy build

--- a/src/i18n/_locales/cs/messages.json
+++ b/src/i18n/_locales/cs/messages.json
@@ -1,4 +1,8 @@
 {
+    "01a7a4ed-5f50-4c57-9757-0b8da49fd719": {
+        "message": "(malé děti ideálně dopoledne)",
+        "description": "Photos Retake page - the Upcoming Dates section - line 6 - part 4"
+    },
     "01c5afcf-9c02-4320-8a97-7f0d273c0fdd": {
         "message": "Agentura Poppy casting je určena dětem od 6 měsíců do 15 let. Naším cílem je objevit talentované a zajímavé děti a poskytnout jim příležitost uplatnit se ve filmovém či reklamním prostředí.",
         "description": "Q&A page - the main info at the top of the page"
@@ -55,6 +59,10 @@
         "message": "Je Vaše dítě zdravé?",
         "description": "Q&A page - question 2"
     },
+    "1675de56-efbc-42f8-9e9b-0c1d15eb0f20": {
+        "message": "Postup:",
+        "description": "Photos Retake page - the Upcoming Dates section - line 7 - part 1"
+    },
     "16af5122-17d7-4485-8406-55016c4c9aa6": {
         "message": "Děti 4-15 let hradí jednorázově",
         "description": "Q&A page - answer to question 7 - paragraph 2 - part1"
@@ -90,6 +98,10 @@
     "1e5bbbcb-aea5-43ee-bbbd-8bd474ce5212": {
         "message": "Registrujeme děti ve věku",
         "description": "Registrations page - the Upcoming Dates section - Breakdown by age - line 7 - part 2"
+    },
+    "1e7f8e8f-2fcf-4e16-9c38-069c9f25c634": {
+        "message": "Foto z přefocení ani castingů neposkytujeme ani je není možné odkupovat - slouží jen pro naši interní databázi. Děkujeme za pochopení.",
+        "description": "Photos Retake page - the Upcoming Dates section - line 9"
     },
     "1ec457c8-6064-44fb-91fc-1bea98e9e39c": {
         "message": "Výsledky castingu mnohdy víme až \"na poslední chvíli\", tedy není možné dávat vědět všem, koho nevybrali. Informujeme ty, kdo jsou v užším výběru nebo potvrzeni. Držte si termíny volné až do dne kostýmové zkoušky či natáčení, pokud se nikdo neozval, znamená to, že jste neuspěli. Děkujeme za pochopení.",
@@ -155,6 +167,14 @@
         "message": "Česky hovořící děti (bez cizího přízvuku) nebo rodilí mluvčí angličtiny.",
         "description": "Registrations page - oldest kids - the second line - part 2"
     },
+    "2b35b1bc-c05e-4fdc-9f4e-2c75e20d14fb": {
+        "message": "Stačí nám dát vědět, že dorazíte.",
+        "description": "Photos Retake page - the Upcoming Dates section - line 7 - part 2"
+    },
+    "2bf98320-b159-426f-a434-0ace136f4fa9": {
+        "message": "šedá barva (máme šedé pozadí v atelieru)",
+        "description": "Photos Retake page - the Upcoming Dates section - line 16"
+    },
     "2d22df08-1649-4bda-9764-6a68b683002d": {
         "message": "NE: šedá barva (máme šedé pozadí fotek)",
         "description": "Q&A page - answer to question 11 - paragraph 1 - inappropriate 1"
@@ -179,6 +199,10 @@
         "message": "Sloty mezi",
         "description": "Registrations page - the Upcoming Dates section - Breakdown by age - line 2 - part 2"
     },
+    "36a251f6-1590-401c-ab9d-4ff693c6b3e0": {
+        "message": "flitry (moc se lesknou)",
+        "description": "Photos Retake page - the Upcoming Dates section - line 18"
+    },
     "37dc3db8-1705-4a7e-83a8-675806963340": {
         "message": "Jak to v Poppy casting funguje?",
         "description": "Q&A page - question 6"
@@ -190,6 +214,10 @@
     "37f7a6cf-6e2d-4512-a549-da264b47c3b4": {
         "message": "Je Vaše dítě nebojácné? Není na maminku příliš fixované, aby zvládlo být kousek od ní nebo v náručí herečky? U miminek se pochopitelně vše velmi rychle mění, tedy je těžké předvídat, jak se dítě bude chovat, ale pokud víte, že při pohledu na cizího člověka, který na něj promluví, dítě pláče, nebude nejspíše na casting vhodný adept.",
         "description": "Q&A page - answer to question 1 - paragraph 2 - part 2"
+    },
+    "37ff75cc-75cb-477a-96d3-57aa24c7797e": {
+        "message": "Přefocení",
+        "description": "Above the top menu - photos retake"
     },
     "3ea3bde4-c556-4b30-83af-3d54c089085e": {
         "message": "Nelze. Registrujeme pouze osobně ve vypsaných termínech, kde si dítě vyfotíme, abychom získali představu o tom, zda se nestydí, zda komunikuje, jak na nás působí, jaké jsou jeho řečové a herecké schopnosti, charisma.",
@@ -218,6 +246,10 @@
     "45d926b1-7a58-4115-8848-a2356582480e": {
         "message": "Může se stát, že je casting či natáčení v době, kdy jsou děti ve škole, někdy je nutné dítě ze školy uvolnit nebo se castingu neúčastnit. Není možné žádat o změnu času pořádání castingu. Doprovod na místě nemusí být nutně zákonný zástupce, klidně babička, teta apod.",
         "description": "Q&A page - answer to question 10 - paragraph 4"
+    },
+    "46779be9-35c4-43c5-a13b-62de06f71123": {
+        "message": "Oblečení na přefocení / casting",
+        "description": "Photos Retake page - the Upcoming Dates section - line 10"
     },
     "46d77863-5004-4936-b476-88356481eef9": {
         "message": "Františka Křížka 362/1, Praha 7, 2. patro",
@@ -291,6 +323,10 @@
         "message": "👶 1. Miminka (6 - 17 měsíců) ✅",
         "description": "Registrations page - youngest kids"
     },
+    "56c65642-5dba-4a5e-8919-f6267b16e5604": {
+        "message": "❌ Nevhodné oblečení",
+        "description": "Photos Retake page - the Upcoming Dates section - line 15"
+    },
     "574a87d0-dc5e-46e4-8f34-00d4f2d7d03f": {
         "message": "Stop stav:",
         "description": "Registrations page - the Upcoming Dates section - Breakdown by age - line 8 - part 1"
@@ -342,6 +378,10 @@
     "61d06bf0-0dd3-47e9-a9b3-b299f6eadeff": {
         "message": "Děti od 18 měsíců do 4. narozenin aktuálně",
         "description": "Registrations page - the Upcoming Dates section - Breakdown by age - line 8 - part 2"
+    },
+    "61e2be67-e2bf-4ca2-8057-495592befb8b": {
+        "message": "📅 Termíny konání",
+        "description": "Photos Retake page - the Upcoming Dates section - line 3"
     },
     "625b14ea-6bfb-43df-b196-3101abbe22cd": {
         "message": "ANO: tričko, body, kalhoty, džíny, sukně, běžné šaty",
@@ -399,6 +439,10 @@
         "message": "Jméno dítěte",
         "description": "Email Us page - the child name label"
     },
+    "6fa4d103-38fb-461d-9261-c95a0aeaf05b": {
+        "message": "proužky nebo puntíky",
+        "description": "Photos Retake page - the Upcoming Dates section - line 13"
+    },
     "6fc6f245-be0b-474a-b682-ef215bead56f": {
         "message": "Napište nám",
         "description": "Above the top menu - email us"
@@ -410,6 +454,10 @@
     "71ad3241-7e46-48e2-a257-302e22f160ee": {
         "message": "Zájem o registraci",
         "description": "Email Us page - the subject of the email"
+    },
+    "72070a24-c9bf-4a0f-94b2-eaa39fbb2f15": {
+        "message": "jednobarevné tričko",
+        "description": "Photos Retake page - the Upcoming Dates section - line 12"
     },
     "72a13e6a-5639-4ca0-9aa9-2e7d8e298ccc": {
         "message": "IČO: 047 40 165",
@@ -507,9 +555,21 @@
         "message": "strhneme jednorázově až z 1. honoráře dítěte.",
         "description": "Registrations page - oldest kids - the eighth line - part 2"
     },
+    "842d01de-0ba6-4eee-84bd-d628235f8303": {
+        "message": "velké nápisy či obrázky, loga značek",
+        "description": "Photos Retake page - the Upcoming Dates section - line 17"
+    },
+    "84fb8e7c-a8a9-43bf-b996-66d941651132": {
+        "message": "✅ Vhodné oblečení",
+        "description": "Photos Retake page - the Upcoming Dates section - line 11"
+    },
     "857e18e9-09cd-4b7e-90f6-3bd50a63a91f": {
         "message": "Pro mimopražské zájemce je dojíždění velmi náročné časově i finančně. Dětem dále než 1h dojezdu do Prahy registraci nedoporučujeme.",
         "description": "Q&A page - answer to question 3 - paragraph 2"
+    },
+    "865839c4-b722-435b-bad7-d198e470f4f5": {
+        "message": "Kontakt:",
+        "description": "Photos Retake page - the Upcoming Dates section - line 8"
     },
     "8ab2a5dc-1b75-4672-be1c-2662b901f82e": {
         "message": "Postup:",
@@ -551,6 +611,10 @@
         "message": "4. roku věku dítěte",
         "description": "Registrations page - middle kids - the second line - part 3"
     },
+    "9010fa97-eda3-409b-b8cc-b451afa1b0fb": {
+        "message": "Přefocení je zdarma a ve Vašem zájmu, abychom mohli dítě z fotek nabízet do projektů.",
+        "description": "Photos Retake page - the Upcoming Dates section - line 2"
+    },
     "90ddf791-150a-40f2-82b1-caf162c0535d": {
         "message": "mezi 30 - 60 min podle obsazenosti",
         "description": "Registrations page - oldest kids - the fifth line - part 2"
@@ -566,6 +630,10 @@
     "9410fcc1-d823-40f0-a707-96592e796d22": {
         "message": "NE: odhalená ramena, dekolt, pupíky",
         "description": "Q&A page - answer to question 11 - paragraph 1 - inappropriate 3"
+    },
+    "9448854a-6f25-4d54-9671-55ee8e983db4": {
+        "message": "běžné, pohodlné oblečení jako do školy",
+        "description": "Photos Retake page - the Upcoming Dates section - line 14"
     },
     "952d7587-71ba-4883-9516-086adfd2360b": {
         "message": "Registrace",
@@ -622,6 +690,10 @@
     "a1b1962d-baff-4ec4-bd06-55d9e071c381": {
         "message": "Dítěti musí \"uměleckou činnost\" povolit lékař a úřad práce, což je zákonnou podmínkou pro jakékoliv natáčení či focení, za které dítě dostává honorář. Podrobnosti vysvětlujeme u registrace. Důvodem pro neudělení povolení může být vysoká nemocnost dítěte, transplantace i například v útlém věku, závažné či chronické onemocnění apod.",
         "description": "Q&A page - answer to question 2 - paragraph 1"
+    },
+    "a1d9f328-8463-4f5e-9b8c-e04ad8d7ad5d": {
+        "message": "9:00 - 18:00",
+        "description": "Photos Retake page - the Upcoming Dates section - line 6 - part 3"
     },
     "a1e83a25-c48a-4224-af4c-f3064715264e": {
         "message": "Dětskému castingu se věnuje od roku 2005, Poppycasting založila v roce 2012.",
@@ -687,6 +759,14 @@
         "message": "14:00 - 18:00",
         "description": "Registrations page - the Upcoming Dates section - Breakdown by age - line 5 - part 3"
     },
+    "b2e111de-14b4-4b6a-ac2a-056e67b8c717": {
+        "message": "Děti do 3 let přefocujeme 1x za půl roku, starší děti 1x ročně.",
+        "description": "Photos Retake page - the Upcoming Dates section - line 1"
+    },
+    "b373aa10-aa77-4081-ae70-fe91342a1393": {
+        "message": "Adresa:",
+        "description": "Photos Retake page - the Upcoming Dates section - line 4"
+    },
     "b5558f2d-bd8e-4ba3-a2c8-561a9e5a6adc": {
         "message": "Registrujeme osobně ve vypsaných termínech (viz níže)",
         "description": "Registrations page - oldest kids - the first line"
@@ -718,6 +798,14 @@
     "bd99edd4-19bb-4b02-85dd-ff5c2268413d": {
         "message": "Odeslat",
         "description": "Email Us page - the submit button label"
+    },
+    "bddbf259-ebe9-4046-a77f-a156a63aa565": {
+        "message": "(Upozornění: Mimo tyto termíny nás v ateliéru nezastihnete, pokud Vám termíny nevyhovují, pošlete foto mailem.)",
+        "description": "Photos Retake page - the Upcoming Dates section - line 5"
+    },
+    "c0461f3b-8039-434d-9866-c4053b7480fc": {
+        "message": "příliš slavnostní oděv jako kravata, košile, šifonové velké sukně apod.",
+        "description": "Photos Retake page - the Upcoming Dates section - line 20"
     },
     "c13a8586-e3cf-467a-b651-a498647b1e5e": {
         "message": "U komerčních zakázek je honorář vždy uveden, u filmu a seriálu honorář řešíme až po obsazení dítěte do role.",
@@ -783,6 +871,10 @@
         "message": "Castingy jsou zdarma. Přefocení každý půl rok a po 3.roce každý rok u nás v atelieru také zdarma.",
         "description": "Q&A page - answer to question 7 - paragraph 3"
     },
+    "d11a4b3a-0234-4608-a41b-55ea262980e3": {
+        "message": "Čas:",
+        "description": "Photos Retake page - the Upcoming Dates section - line 6 - part 1"
+    },
     "d1e69a03-1e0d-4bb6-9613-db7973225f5f": {
         "message": "Mimo stanovené termíny nás tam nezastihnete.",
         "description": "Q&A page - answer to question 9 - paragraph 2"
@@ -798,6 +890,10 @@
     "d44643cf-bd5f-40f5-baae-b4afaac68f25": {
         "message": "Albert, Ajax, Areoplan, AF Gruppen, Amazon, Apetito, Ariel, Arktika, Archeopark, Asda, Audi, Auchan, Auto Esa, Aukro, Aquila, Banque populare",
         "description": "References page - part one of the fourth section"
+    },
+    "d450f9ac-7b2a-4d57-81c4-2cecb31cef7b": {
+        "message": "Aktuální termíny přefocení již registrovaných dětí",
+        "description": "Photos Retake page - the Upcoming Dates section - the header"
     },
     "d66dad62-db2a-4ed5-bbfd-b9cb95d6c625": {
         "message": "Dangerous Liaisons, Extraction 2, Foundation, Freud, Guardians, Hanna, Haunted 2, Hui Buh 2, Jojo Rabbit, Knightfall, Lore, Lucky Man, Margrete 1st, Norimberk, One life, Ophelia, Růžový králíček, Shadowplay, Shadows in my eyes, Sturmfrei, Tag Team, The Commander, The Crow, The Grey Man, The Letter for the King, The Marco effect, The thing I saw, The Wheel of time, White bird, Whiskey Cavalier, Whos’next?, 3 Mušketýři, 12 Monkeys + studentské filmy FAMU",
@@ -843,6 +939,10 @@
         "message": "Dítě se musí dostavit",
         "description": "Registrations page - the Upcoming Dates section - Breakdown by age - line 10 - part 2"
     },
+    "e44a496d-7dc5-4ca3-9e13-aa60d9708547": {
+        "message": "Kdykoli mezi",
+        "description": "Photos Retake page - the Upcoming Dates section - line 6 - part 2"
+    },
     "e4cc62ee-a458-4f2e-8cd2-909186ada420": {
         "message": "objednání nutné",
         "description": "Registrations page - youngest kids - the second line - the third part"
@@ -854,6 +954,10 @@
     "e50565f3-cfb6-4d53-be2b-874aafe932ff": {
         "message": "❌ 2. Batolata (18 měsíců - 3 roky) — STOPSTAV ❌",
         "description": "Registrations page - middle kids"
+    },
+    "e52146cc-ee02-4ff6-b7e7-da3ff2f48320": {
+        "message": "Přefocení",
+        "description": "Photos Retake page - the header"
     },
     "e698d1df-4094-4935-b3f0-bf36c35f3e3a": {
         "message": "Jakou má vaše dítě šanci na úspěch?",
@@ -930,5 +1034,9 @@
     "fdcabf13-98ac-446a-9ff1-d9eaa4f20b30": {
         "message": "2 000 Kč jednorázově u registrace, žádné další poplatky.",
         "description": "Registrations page - youngest kids - the fourth line - part 2"
+    },
+    "fe929c23-70f8-4162-b745-96ea5706d2f2": {
+        "message": "křiklavé vzory",
+        "description": "Photos Retake page - the Upcoming Dates section - line 19"
     }
 }
